Fix numbers on collapsed worksheets.
Numbers are now visible, even when the worksheet is collapsed.

--- a/kgisteam/courses/static/courses/sass/courses_course.scss
+++ b/kgisteam/courses/static/courses/sass/courses_course.scss
@@ -3,14 +3,10 @@
     margin-right: 1ex;
 }
 
-
-// Syllabi
-
-$border-color: rgb(150,150,150);
-
 // https://www.sitepoint.com/managing-responsive-breakpoints-sass/
 $breakpoints: (
-  'medium' : ( max-width: 875px),
+  'ws-medium': (max-width: 768px),
+  'syllabus-medium' : (max-width: 875px),
 );
 
 @mixin respond-to($name) {
@@ -19,7 +15,15 @@ $breakpoints: (
       @content
     }
   }
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+        + "Please make sure it is defined in `$breakpoints` map.";
+  }
 }
+
+// Syllabi
+
+$border-color: rgb(150,150,150);
 
 table.flex-table {
   width: 100vw;
@@ -30,7 +34,7 @@ table.flex-table {
     flex: 1, 1;
     flex-flow: row nowrap;
 
-    @include respond-to(medium) {
+    @include respond-to('syllabus-medium') {
       flex-flow: row wrap;
     }
 
@@ -58,7 +62,7 @@ table.flex-table {
         max-width: 8em;
       }
 
-      @include respond-to(medium) {
+      @include respond-to('syllabus-medium') {
         max-width: unset;
         min-width: 50%;
       }
@@ -71,58 +75,79 @@ table.flex-table {
 }
 
 // Worksheets
-.worksheet-problem {
-    padding: 0.5em 0 1em 0;
+$worksheet-content-margins: 1em;
+
+.worksheet-buttons {
+  margin: $worksheet-content-margins;
+}
+
+#worksheet-course-name {
+    padding-left: 1em;
+    padding-top: 1em;
 }
 
 .worksheet-problem-form {
-    padding: 1em 0 1em 0;
+  padding: 1em 0 1em 0;
+}
+
+.worksheet-problem {
+  margin: $worksheet-content-margins;
+}
+
+@include respond-to('ws-medium') {
+    $worksheet-content-margins: 2em;
+    .worksheet-problem {
+      margin: $worksheet-content-margins;
+    }
+
+    .worksheet-buttons {
+      margin: $worksheet-content-margins;
+    }
 }
 
 // Accordion
 ._accordion {
- background-color: #eee;
- color: #444;
- cursor: pointer;
- padding: 18px;
- width: 100%;
- text-align: left;
- border: none;
- outline: none;
- transition: 0.4s;
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 ._accordion-active, ._accordion:hover {
- background-color: #ccc;
+  background-color: #ccc;
 }
 
 /* Style the accordion panel. Note: hidden by default */
 ._accordion-content {
- padding: 0 18px;
- background-color: white;
- display: none;
- overflow: hidden;
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
 }
 
 /* Get rid of arrows on number inputs */
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 input[type=number] {
-    -moz-appearance:textfield;
+  -moz-appearance:textfield;
 }
-
 
 // Resources
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 0;
-    padding: 0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 0;
+  padding: 0;
 }
